Update test-aj17 pLaTeX source

--- a/tex/test-aj17.platex-otf.tex
+++ b/tex/test-aj17.platex-otf.tex
@@ -10,11 +10,12 @@
 
 \TeX~Live 2018ではCID+23058とCID+23059を扱うことができないため、
 Adobe-Japan1-7のテストができません。
+本サンプルのPDF生成には\TeX~Live 2019以降が必要です。
 
-\textgt{\CID{7621} \CID{7622} \CID{7623} \CID{8323}}
-%\textgt{\CID{7621} \CID{7622} \CID{7623} \CID{8323} \CID{23058}}
+%\textgt{\CID{7621} \CID{7622} \CID{7623} \CID{8323}}
+\textgt{\CID{7621} \CID{7622} \CID{7623} \CID{8323} \CID{23058}}
 
-\textgt{\CID{12041} \CID{12042} \CID{12043} \CID{12044}}
-%\textgt{\CID{12041} \CID{12042} \CID{12043} \CID{12044} \CID{23059}}
+%\textgt{\CID{12041} \CID{12042} \CID{12043} \CID{12044}}
+\textgt{\CID{12041} \CID{12042} \CID{12043} \CID{12044} \CID{23059}}
 
 \end{document}
