Add test-v pLaTeX sources

--- a/tex/test-v.platex-04.tex
+++ b/tex/test-v.platex-04.tex
@@ -4,7 +4,7 @@
 \documentclass[tate]{jlreq}
 \usepackage{plext}
 
-\title{縦書きテスト\rensuji{90}字形}
+\title{縦書きテスト\rensuji{04}字形}
 \author{夏目漱石}
 
 \begin{document}
@@ -52,6 +52,27 @@
   &
   \gtfamily\sffamily
   【‖‖‖‖‖】一区三十四点U+2016『双柱』
+  \\
+
+  \mcfamily
+  【°°°°°】一区七十五点U+00B0『度』
+  &
+  \gtfamily\sffamily
+  【°°°°°】一区七十五点U+00B0『度』
+  \\
+
+  \mcfamily
+  【′′′′′】一区七十六点U+2032『分』
+  &
+  \gtfamily\sffamily
+  【′′′′′】一区七十六点U+2032『分』
+  \\
+
+  \mcfamily
+  【″″″″″】一区七十七点U+2033『秒』
+  &
+  \gtfamily\sffamily
+  【″″″″″】一区七十七点U+2033『秒』
   \\
 
   \hline
