--- a/tex/test-rotate-shift.platex-otf.tex
+++ b/tex/test-rotate-shift.platex-otf.tex
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント 2020xxxx 回転・平行移動グリフ一覧
+% 原ノ味フォント 20200418 回転・平行移動グリフ一覧
 % グリフ比較用
 
 \documentclass[dvipdfmx]{jsarticle}
@@ -10,7 +10,7 @@
 
 \usepackage{test-rotate-shift}
 
-\title{原ノ味フォント2020xxxx回転・平行移動グリフ一覧 \\
+\title{原ノ味フォント20200418回転・平行移動グリフ一覧 \\
 --- グリフ比較用 ---}
 \author{細田 真道}
 
