--- a/tex/test-rotate-shift.sty
+++ b/tex/test-rotate-shift.sty
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント 2020xxxx 回転・平行移動グリフ
+% 原ノ味フォント 20200418 回転・平行移動グリフ
 % テスト用マクロ
 
 \definecolor{gray1}{rgb}{.9,.9,.9}
