--- a/tex/test-cmap-inconsistence.platex-otf.tex
+++ b/tex/test-cmap-inconsistence.platex-otf.tex
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント 20200xxx cmap CMap 不一致グリフ一覧
+% 原ノ味フォント 20200612 cmap CMap 不一致グリフ一覧
 % グリフ比較用
 
 \documentclass[dvipdfmx]{jsarticle}
@@ -8,7 +8,7 @@
 \usepackage{lmodern}
 \usepackage{xcolor}
 
-\title{原ノ味フォント20200xxx CMap cmap不一致グリフ一覧 \\
+\title{原ノ味フォント20200612 CMap cmap不一致グリフ一覧 \\
 --- グリフ比較用 ---}
 \author{細田 真道}
 
