Fix tex/sample-3w-preset.lualatex.tex \mgfamily font name

--- a/tex/sample-3w-preset.lualatex.tex
+++ b/tex/sample-3w-preset.lualatex.tex
@@ -36,6 +36,9 @@ Lua\TeX -ja 20191117.0以降が必要。
 
 \mgfamily
 \mdseries
-丸ゴシック（原ノ味ゴシックHeavyで代替）
+丸ゴシック（原ノ味ゴシックMedium
+\footnote{Lua\TeX -ja 20200517.0以降。
+Lua\TeX -ja 20200412.0までは原ノ味ゴシックHeavyで代替。}
+で代替)
 
 \end{document}
