Add test-palt_to_pwid.xetex.tex U+31F7 U+309A combined

--- a/tex/test-palt_to_pwid.xetex.tex
+++ b/tex/test-palt_to_pwid.xetex.tex
@@ -128,6 +128,16 @@ none
 \fpwid
 アサキユメミシ
 ヱヒモセスン
++pwid
+
+\fnone
+\char"31F7 \char"309A \char"31F7 \char"309A \char"31F7 \char"309A
+none,
+\fpalt
+\char"31F7 \char"309A \char"31F7 \char"309A \char"31F7 \char"309A
++palt,
+\fpwid
+\char"31F7 \char"309A \char"31F7 \char"309A \char"31F7 \char"309A
 +pwid}
 
 \baselineskip=25pt
