--- a/tex/test-gsub-ligature-extra.platex-nomap.tex
+++ b/tex/test-gsub-ligature-extra.platex-nomap.tex
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント GSUB リガチャ置き換えグリフ
+% 原ノ味フォント 20200912 GSUB リガチャ置き換えグリフ
 % CTAN haranoaji-extra パッケージ収録分
 
 \documentclass[dvipdfmx]{jsarticle}
@@ -21,7 +21,7 @@
 
 \usepackage{test-gsub-ligature}
 
-\title{原ノ味フォント GSUB リガチャ置き換えグリフ \\
+\title{原ノ味フォント 202001912 GSUB リガチャ置き換えグリフ \\
 --- CTAN haranoaji-extra パッケージ収録分 ---}
 \author{細田 真道}
 
