--- a/tex/test-gsub-ligature.sty
+++ b/tex/test-gsub-ligature.sty
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント GSUB リガチャ置き換えグリフ
+% 原ノ味フォント 20200912 GSUB リガチャ置き換えグリフ
 % テスト用マクロ
 
 \definecolor{gray1}{rgb}{.9,.9,.9}
