--- a/tex/test-gsub-ligature.platex-otf.tex
+++ b/tex/test-gsub-ligature.platex-otf.tex
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント GSUB リガチャ置き換えグリフ
+% 原ノ味フォント 20200912 GSUB リガチャ置き換えグリフ
 % グリフ比較用
 
 \documentclass[dvipdfmx]{jsarticle}
@@ -10,7 +10,7 @@
 
 \usepackage{test-gsub-ligature}
 
-\title{原ノ味フォント GSUB リガチャ置き換えグリフ \\
+\title{原ノ味フォント 20200912 GSUB リガチャ置き換えグリフ \\
 --- グリフ比較用 ---}
 \author{細田 真道}
 
