--- a/tex/test-kana-pwidvert.lualatex.tex
+++ b/tex/test-kana-pwidvert.lualatex.tex
@@ -2,9 +2,11 @@
 
 % 原ノ味フォント 202012xx プロポーショナルかな 縦組みテスト
 
-\documentclass[tate]{jlreq}
+\documentclass[tate,paper={297mm,210mm}]{jlreq}
 
-\title{原ノ味フォント202012xxプロポーショナルかな縦組みテスト（失敗）}
+\usepackage{luatexja-otf}
+
+\title{原ノ味フォント202012xx \\ プロポーショナルかな縦組みテスト（失敗）}
 
 \author{細田 真道}
 
@@ -42,10 +44,16 @@
 つまり、本テストで必要となる
 プロポーショナルかな縦組み用を選択できていない
 （選択されたプロポーショナルかな横組み用の高さは
-  全角と同じなので変わらない）。
+  全角と同じなので全体の高さも全角から変わらない）。
 
-源ノは+pwidが無く、+vertのみが適用されるため、問題ないように見える
-（もちろんプロポーショナルにはなっていない）。
+さらに、原ノ味で \textbackslash CIDによるCID直接指定で
+プロポーショナルかな縦組み用グリフを指定してみたところ、
+高さは全角より詰まるようになったが、バランスがおかしいようにも感じる。
+
+源ノは+pwidが無く、+vertのみが適用されるため、
++pwid, +vertは問題ないように見える
+（もちろん全角のままなのでプロポーショナルにはなっていない）。
+AJ1フォントではないため、CID直接指定はできない。
 
 \clearpage
 
@@ -57,6 +65,12 @@
 
 \hmrpwidvert\hbox{\tate\vrule ちょっと\vrule +pwid;+vert}
 
+\hmrnone\hbox{\tate\vrule%
+  \CID{16017}%
+  \CID{16055}%
+  \CID{16019}%
+  \CID{16024}\vrule direct}
+
 \section*{原ノ味角ゴシックRegular}
 
 \hgrnone\hbox{\tate\vrule ちょっと\vrule +vert}
@@ -64,6 +78,12 @@
 \hgrvpal\hbox{\tate\vrule ちょっと\vrule +vert;+vpal}
 
 \hgrpwidvert\hbox{\tate\vrule ちょっと\vrule +pwid;+vert}
+
+\hgrnone\hbox{\tate\vrule%
+  \CID{16017}%
+  \CID{16055}%
+  \CID{16019}%
+  \CID{16024}\vrule direct}
 
 \section*{源ノ明朝Regular}
 
