--- a/tex/test-kana-fwid-extra.platex-nomap.tex
+++ b/tex/test-kana-fwid-extra.platex-nomap.tex
@@ -29,7 +29,7 @@
 
 \maketitle
 \abstract{%
-  原ノ味フォント02012xx版は、
+  原ノ味フォント20210101版は、
   横組み用のCID+12269小書き「こ」およびCID+12271小書き「コ」、
   縦組み用のCID+12270小書き「こ」およびCID+12272小書き「コ」
   を搭載していない。
