--- a/tex/test-kana-hkna-extra.platex-nomap.tex
+++ b/tex/test-kana-hkna-extra.platex-nomap.tex
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント202012xx横組み最適化かなグリフ一覧
+% 原ノ味フォント20210101横組み最適化かなグリフ一覧
 % CTAN haranoaji-extra パッケージ収録分
 
 \documentclass[dvipdfmx]{jsarticle}
@@ -21,7 +21,7 @@
 
 \usepackage{test-kana-hkna}
 
-\title{原ノ味フォント202012xx横組み最適化かなグリフ一覧\\
+\title{原ノ味フォント20210101横組み最適化かなグリフ一覧\\
 --- CTAN haranoaji-extra パッケージ収録分 ---}
 \author{細田 真道}
 
@@ -29,7 +29,7 @@
 
 \maketitle
 \abstract{%
-  原ノ味フォント02012xx版は、
+  原ノ味フォント20210101版は、
   CID+12295小書き「こ」およびCID+12385小書き「コ」を搭載していない。
   これは、源ノフォントがこれらのグリフを搭載していないためである。
 }
