--- a/tex/test-kana-pwid.xelatex.tex
+++ b/tex/test-kana-pwid.xelatex.tex
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント 202012xx プロポーショナルかな 横組み用グリフ
+% 原ノ味フォント 20210101 プロポーショナルかな 横組み用グリフ
 
 \documentclass[xelatex,ja=minimal]{bxjsarticle}
 
@@ -10,7 +10,7 @@
 \usepackage{bxtexlogo}
 \bxtexlogoimport{XeLaTeX}
 
-\title{原ノ味フォント 202012xx プロポーショナルかな \\ 横組み用グリフ}
+\title{原ノ味フォント 20210101 プロポーショナルかな \\ 横組み用グリフ}
 \author{細田 真道}
 
 \definecolor{gray1}{rgb}{.9,.9,.9}
@@ -276,7 +276,7 @@
 \maketitle
 
 \abstract{%
-  原ノ味フォント202012xx版は、
+  原ノ味フォント20210101版は、
   CID+15723小書き「こ」およびCID+15724小書き「コ」を搭載していない。
   これは、源ノフォントがこれらのグリフを搭載していないためである。}
 
