--- a/tex/test-kana-pwidvert.lualatex.tex
+++ b/tex/test-kana-pwidvert.lualatex.tex
@@ -1,12 +1,12 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント 202012xx プロポーショナルかな 縦組みテスト
+% 原ノ味フォント 20210101 プロポーショナルかな 縦組みテスト
 
 \documentclass[tate,paper={297mm,210mm}]{jlreq}
 
 \usepackage{luatexja-otf}
 
-\title{原ノ味フォント202012xx \\ プロポーショナルかな縦組みテスト（失敗）}
+\title{原ノ味フォント20210101 \\ プロポーショナルかな縦組みテスト（失敗）}
 
 \author{細田 真道}
 
@@ -32,12 +32,12 @@
 
 \section*{概要}
 
-残念ながら2020年12月xx日現在、本テストはうまく動いてくれない。
+残念ながら2021年1月1日現在、本テストはうまく動いてくれない。
 
 原ノ味と源ノで共通のはずの+vpalの動作が共通しておかしいように見える。
 どちらもグリフの位置は変更されているが、高さが低くなっていない。
 
-また、原ノ味202012xxで搭載したプロポーショナルかな縦組みは、
+また、原ノ味20210101で搭載したプロポーショナルかな縦組みは、
 +pwid適用後に+vertを適用することでグリフが得られる
 （Adobe-Japan1のサイトで配布されているGSUBと同じ）ようになっているが、
 選択されたグリフはプロポーショナルかな横組み用になっていた。
