--- a/tex/test-kana-pwidvert.xetex.tex
+++ b/tex/test-kana-pwidvert.xetex.tex
@@ -1,9 +1,11 @@
 % -*- coding: utf-8 mode:tex -*-
 
+% 原ノ味フォント 20210101 プロポーショナルかな縦組みテスト
+
 \font\f="[HaranoAjiMincho-Medium.otf]"
 \f
 
-原ノ味フォント202012xxプロポーショナルかな縦組みテスト（失敗）
+原ノ味フォント20210101プロポーショナルかな縦組みテスト（失敗）
 
 LuaLaTeX ではプロポーショナルかな縦組みのテストがうまくいかなかったので、
 
