--- a/tex/test-kana-vkna.sty
+++ b/tex/test-kana-vkna.sty
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント202012xx縦組み最適化かなグリフ一覧
+% 原ノ味フォント20210101縦組み最適化かなグリフ一覧
 % テスト用マクロ
 
 \definecolor{gray1}{rgb}{.9,.9,.9}
