--- a/tex/test-otf-expert.platex-otf.tex
+++ b/tex/test-otf-expert.platex-otf.tex
@@ -18,7 +18,7 @@ expertオプション\ruby{付}{つ}きにした上で
 \ruby{埋}{う}め\ruby{込}{こ}みPDFと
 フォント\ruby{非}{ひ}\ruby{埋}{う}め\ruby{込}{こ}みPDFの
 \ruby{双方}{そうほう}を\ruby{生成}{せいせい}している。
-\ruby{原ノ味}{はらのあじ}フォント202012xx版は、
+\ruby{原ノ味}{はらのあじ}フォント20210101版は、
 expertオプションで\ruby{使}{つか}われる、
 \ruby{組方向}{くみほうこう}に\ruby{応}{おう}じた\ruby{専用}{せんよう}かなを
 \ruby{持}{も}っているが、
