--- a/tex/test-kana-hkna.platex-otf.tex
+++ b/tex/test-kana-hkna.platex-otf.tex
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント202012xx横組み最適化かなグリフ一覧
+% 原ノ味フォント20210101横組み最適化かなグリフ一覧
 % グリフ比較用
 
 \documentclass[dvipdfmx]{jsarticle}
@@ -10,7 +10,7 @@
 
 \usepackage{test-kana-hkna}
 
-\title{原ノ味フォント202012xx横組み最適化かなグリフ一覧\\
+\title{原ノ味フォント20210101横組み最適化かなグリフ一覧\\
 --- グリフ比較用 ---}
 \author{細田 真道}
 
@@ -31,7 +31,7 @@
   デザインの差を除いて同じような表示になれば、
   原ノ味フォントのグリフが正しいと考えることができる。
 
-  原ノ味フォント02012xx版は、
+  原ノ味フォント20210101版は、
   CID+12295小書き「こ」およびCID+12385小書き「コ」を搭載していない。
   これは、源ノフォントがこれらのグリフを搭載していないためである。
 }
