--- a/tex/test-kana-hkna.sty
+++ b/tex/test-kana-hkna.sty
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント202012xx横組み最適化かなグリフ一覧
+% 原ノ味フォント20210101横組み最適化かなグリフ一覧
 % テスト用マクロ
 
 \definecolor{gray1}{rgb}{.9,.9,.9}
