Update tex/test-kana-pwidvert*.tex for 20210102

--- a/tex/test-kana-pwidvert.lualatex.tex
+++ b/tex/test-kana-pwidvert.lualatex.tex
@@ -1,12 +1,12 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント 20210101 プロポーショナルかな 縦組みテスト
+% 原ノ味フォント 20210102 プロポーショナルかな 縦組みテスト
 
 \documentclass[tate,paper={297mm,210mm}]{jlreq}
 
 \usepackage{luatexja-otf}
 
-\title{原ノ味フォント20210101 \\ プロポーショナルかな縦組みテスト（失敗）}
+\title{原ノ味フォント20210102 \\ プロポーショナルかな縦組みテスト}
 
 \author{細田 真道}
 
@@ -32,27 +32,21 @@
 
 \section*{概要}
 
-残念ながら2021年1月1日現在、本テストはうまく動いてくれない。
+2021年1月2日現在、
+原ノ味と源ノで共通の+vpalの動作が、共通しておかしいように見える。
+どちらもグリフの位置は変更されているが、高さが低くならなかった。
 
-原ノ味と源ノで共通のはずの+vpalの動作が共通しておかしいように見える。
-どちらもグリフの位置は変更されているが、高さが低くなっていない。
-
-また、原ノ味20210101で搭載したプロポーショナルかな縦組みは、
+原ノ味20210102以降のプロポーショナルかな縦組みは、
 +pwid適用後に+vertを適用することでグリフが得られる
-（Adobe-Japan1のサイトで配布されているGSUBと同じ）ようになっているが、
-選択されたグリフはプロポーショナルかな横組み用になっていた。
-つまり、本テストで必要となる
-プロポーショナルかな縦組み用を選択できていない
-（選択されたプロポーショナルかな横組み用の高さは
-  全角と同じなので全体の高さも全角から変わらない）。
+（Adobe-Japan1のサイトで配布されているGSUBと同じ）ようになっている。
+これにより高さが全角より低く詰まってプロポーショナルになった。
 
 さらに、原ノ味で \textbackslash CIDによるCID直接指定で
 プロポーショナルかな縦組み用グリフを指定してみたところ、
-高さは全角より詰まるようになったが、バランスがおかしいようにも感じる。
++pwid, +vert適用と同様に、高さが全角より低く詰まってプロポーショナルになった。
 
 源ノは+pwidが無く、+vertのみが適用されるため、
-+pwid, +vertは問題ないように見える
-（もちろん全角のままなのでプロポーショナルにはなっていない）。
++pwid, +vertは全角のままでプロポーショナルにはならなかった。
 AJ1フォントではないため、CID直接指定はできない。
 
 \clearpage
