--- a/tex/test-kana-pwidvert.lualatex.tex
+++ b/tex/test-kana-pwidvert.lualatex.tex
@@ -32,9 +32,10 @@
 
 \section*{概要}
 
-2021年1月2日現在、
-原ノ味と源ノで共通の+vpalの動作が、共通しておかしいように見える。
+LuaTeX-ja 20210103.0は+vpalがうまく扱えない（チケット\#41106）ようで、
+原ノ味と源ノともに+vpalの動作がおかしい。
 どちらもグリフの位置は変更されているが、高さが低くならなかった。
+（それとは別に原ノ味20210102は、かなのvpalに問題がある。）
 
 原ノ味20210102以降のプロポーショナルかな縦組みは、
 +pwid適用後に+vertを適用することでグリフが得られる
