--- a/tex/test-kana-pwidvert.xetex.tex
+++ b/tex/test-kana-pwidvert.xetex.tex
@@ -1,11 +1,11 @@
 % -*- coding: utf-8 mode:tex -*-
 
-% 原ノ味フォント 2021xxxx プロポーショナルかな縦組みテスト
+% 原ノ味フォント 20210130 プロポーショナルかな縦組みテスト
 
 \font\f="[HaranoAjiMincho-Medium.otf]"
 \f
 
-原ノ味フォント2021xxxxプロポーショナルかな縦組みテスト
+原ノ味フォント20210130プロポーショナルかな縦組みテスト
 
 LuaLaTeX でのプロポーショナルかな縦組みのテストは +vpal がおかしかったので、
 
