--- a/tex/test-kana-vpal.xetex.tex
+++ b/tex/test-kana-vpal.xetex.tex
@@ -1,11 +1,11 @@
 % -*- coding: utf-8 mode:tex -*-
 
-% 原ノ味フォント 2021xxxx かな縦組み vpal テスト
+% 原ノ味フォント 20210130 かな縦組み vpal テスト
 
 \font\f="[HaranoAjiMincho-Medium.otf]"
 \f
 
-原ノ味フォント 2021xxxx かな縦組み vpal テスト
+原ノ味フォント 20210130 かな縦組み vpal テスト
 
 原ノ味の +vert は、小書き文字「ょ」など縦横で異なる必要があるグリフは
 
@@ -81,7 +81,7 @@
 \font\f="[SourceHanSans-Regular.otf]:vertical,+vert,+vpal"
 \f
 
-ちちちちちょょょょょ+vert,+pal
+ちちちちちょょょょょ+vert,+vpal
 
 \font\f="[SourceHanSerif-Regular.otf]:vertical,+vert"
 \f
@@ -92,6 +92,6 @@
 \font\f="[SourceHanSerif-Regular.otf]:vertical,+vert,+vpal"
 \f
 
-ちちちちちょょょょょ+vert,+pal
+ちちちちちょょょょょ+vert,+vpal
 
 \bye
