Add HaranoAjiMincho for tex/test-aj17.*.tex
HaranoAjiMincho 20211103 has newly contained CID+23058 and CID+23059.
This commit adds those tests as AdobeJapan1-7 test.

--- a/tex/test-aj17.luatex.tex
+++ b/tex/test-aj17.luatex.tex
@@ -119,4 +119,117 @@
 ^^^^32ff
 （原ノ味角ゴシックHeavy, +vert）\par
 
+\font\f{file:HaranoAjiMincho-ExtraLight.otf} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝ExtraLight）\par
+
+\font\f{file:HaranoAjiMincho-Light.otf} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Light）\par
+
+\font\f{file:HaranoAjiMincho-Regular.otf} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Regular）\par
+
+\font\f{file:HaranoAjiMincho-Medium.otf} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Medium）\par
+
+\font\f{file:HaranoAjiMincho-SemiBold.otf} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝SemiBold）\par
+
+\font\f{file:HaranoAjiMincho-Bold.otf} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Bold）\par
+
+\font\f{file:HaranoAjiMincho-Heavy.otf} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Heavy）\par
+
+
+\font\f{file:HaranoAjiMincho-ExtraLight.otf:+vert} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝ExtraLight, +vert）\par
+
+\font\f{file:HaranoAjiMincho-Light.otf:+vert} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Light, +vert）\par
+
+\font\f{file:HaranoAjiMincho-Regular.otf:+vert} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Regular, +vert）\par
+
+\font\f{file:HaranoAjiMincho-Medium.otf:+vert} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Medium, +vert）\par
+
+\font\f{file:HaranoAjiMincho-SemiBold.otf:+vert} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝SemiBold, +vert）\par
+
+\font\f{file:HaranoAjiMincho-Bold.otf:+vert} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Bold, +vert）\par
+
+\font\f{file:HaranoAjiMincho-Heavy.otf:+vert} \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Heavy, +vert）\par
+
 \bye
