--- a/tex/test-aj17.platex-otf.tex
+++ b/tex/test-aj17.platex-otf.tex
@@ -11,11 +11,18 @@
 \TeX~Live 2018ではCID+23058とCID+23059を扱うことができないため、
 Adobe-Japan1-7のテストができません。
 本サンプルのPDF生成には\TeX~Live 2019以降が必要です。
+原ノ味明朝でCID+23058とCID+23059を搭載したのは20211103版以降です。
 
 %\textgt{\CID{7621} \CID{7622} \CID{7623} \CID{8323}}
 \textgt{\CID{7621} \CID{7622} \CID{7623} \CID{8323} \CID{23058}}
 
 %\textgt{\CID{12041} \CID{12042} \CID{12043} \CID{12044}}
 \textgt{\CID{12041} \CID{12042} \CID{12043} \CID{12044} \CID{23059}}
+
+%\textmc{\CID{7621} \CID{7622} \CID{7623} \CID{8323}}
+\textmc{\CID{7621} \CID{7622} \CID{7623} \CID{8323} \CID{23058}}
+
+%\textmc{\CID{12041} \CID{12042} \CID{12043} \CID{12044}}
+\textmc{\CID{12041} \CID{12042} \CID{12043} \CID{12044} \CID{23059}}
 
 \end{document}
