--- a/tex/test-aj17.xetex.tex
+++ b/tex/test-aj17.xetex.tex
@@ -117,4 +117,118 @@
 ^^^^32ff
 （原ノ味角ゴシックHeavy, +vert）\par
 
+
+\font\f="[HaranoAjiMincho-ExtraLight.otf]" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝ExtraLight）\par
+
+\font\f="[HaranoAjiMincho-Light.otf]" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Light）\par
+
+\font\f="[HaranoAjiMincho-Regular.otf]" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Regular）\par
+
+\font\f="[HaranoAjiMincho-Medium.otf]" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Medium）\par
+
+\font\f="[HaranoAjiMincho-SemiBold.otf]" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝SemiBold）\par
+
+\font\f="[HaranoAjiMincho-Bold.otf]" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Bold）\par
+
+\font\f="[HaranoAjiMincho-Heavy.otf]" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Heavy）\par
+
+
+\font\f="[HaranoAjiMincho-ExtraLight.otf]:+vert" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝ExtraLight, +vert）\par
+
+\font\f="[HaranoAjiMincho-Light.otf]:+vert" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Light, +vert）\par
+
+\font\f="[HaranoAjiMincho-Regular.otf]:+vert" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Regular, +vert）\par
+
+\font\f="[HaranoAjiMincho-Medium.otf]:+vert" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Medium, +vert）\par
+
+\font\f="[HaranoAjiMincho-SemiBold.otf]:+vert" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝SemiBold, +vert）\par
+
+\font\f="[HaranoAjiMincho-Bold.otf]:+vert" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Bold, +vert）\par
+
+\font\f="[HaranoAjiMincho-Heavy.otf]:+vert" \f
+^^^^337e
+^^^^337d
+^^^^337c
+^^^^337b
+^^^^32ff
+（原ノ味明朝Heavy, +vert）\par
+
 \bye
