Fix full-width dash specifying
In Unicode, the full-width dash is ambiguous
whether it is U+2014 or U+2015.
This commit fixes to specify it with JIS X 0208 Ku-Ten code 01-29.

--- a/tex/test-fwid-dash-v.platex-otf.tex
+++ b/tex/test-fwid-dash-v.platex-otf.tex
@@ -15,11 +15,11 @@
 \definecolor{gray1}{rgb}{.9,.9,.9}
 \newcommand{\test}[1]{{\fontsize{70pt}{10pt}\selectfont%
     \colorbox{gray1}{#1}\textmd{~}}}
-\newcommand{\testAll}{\test{―}\par
+\newcommand{\testAll}{\test{\char\kuten"011D}\par
   {\fontsize{70pt}{10pt}\selectfont%
-    ――}\par
+    \char\kuten"011D \char\kuten"011D}\par
   {\fontsize{70pt}{10pt}\selectfont%
-    ―――}}
+    \char\kuten"011D \char\kuten"011D \char\kuten"011D}}
 
 \begin{document}
 
