--- a/tex/test-fwid-dash.platex-otf.tex
+++ b/tex/test-fwid-dash.platex-otf.tex
@@ -15,11 +15,11 @@
 \definecolor{gray1}{rgb}{.9,.9,.9}
 \newcommand{\test}[1]{{\fontsize{70pt}{10pt}\selectfont%
     \colorbox{gray1}{#1}\textmd{~}}}
-\newcommand{\testAll}{\test{―}\par
+\newcommand{\testAll}{\test{\char\kuten"011D}\par
   {\fontsize{70pt}{10pt}\selectfont%
-    ――}\par
+    \char\kuten"011D \char\kuten"011D}\par
   {\fontsize{70pt}{10pt}\selectfont%
-    ―――}}
+    \char\kuten"011D \char\kuten"011D \char\kuten"011D}}
 
 \begin{document}
 
