--- a/tex/test-missing-kanji-cids.platex-otf.tex
+++ b/tex/test-missing-kanji-cids.platex-otf.tex
@@ -36,7 +36,7 @@
   原ノ味フォント20211103では源ノ明朝2.000の食い違いの影響を抑えるため
   独自に修正を試みており、
   このファイルはその修正が正しいか確認するためのものである。
-  なお、原ノ味フォント202201xxで食い違いが修正された
+  なお、原ノ味フォント20220130で食い違いが修正された
   源ノ明朝2.001ベースとなったため独自の修正は不要となった。
 }
 
@@ -65,7 +65,7 @@ aj16-kanji.txtグリフ名がAI0-SourceHanSerifに存在しなかったCIDと、
 当時の源ノ明朝JPにグリフが存在しなかったため
 原ノ味明朝20211103から欠けてしまっていたCID+13729, CID+14019を示している。
 原ノ味明朝20211103ではCID+13729, CID+14019はダミーグリフになっていたが、
-原ノ味明朝202201xxではグリフが復活している。
+原ノ味明朝20220130ではグリフが復活している。
 
 \clearpage
 
