Add kana similar CIDs to tex/test-kana-pwid{|vert}.xelatex.tex

--- a/tex/test-kana-pwidvert.xelatex.tex
+++ b/tex/test-kana-pwidvert.xelatex.tex
@@ -263,6 +263,10 @@
   \test{\XeTeXglyph16190}
   \test{\XeTeXglyph16191}
   \test{\XeTeXglyph16192}
+
+  かな類似CID+15980, CID+15981\par
+  \test{\XeTeXglyph15980}
+  \test{\XeTeXglyph15981}
 }
 
 \begin{document}
@@ -275,7 +279,11 @@
 \abstract{%
   原ノ味フォント20210101版は、
   CID+16191小書き「こ」およびCID+16192小書き「コ」を搭載していない。
-  これは、源ノフォントがこれらのグリフを搭載していないためである。}
+  これは、源ノフォントがこれらのグリフを搭載していないためである。
+
+  原ノ味フォント202202xx版より、かなに類似したグリフとして
+  CID+15980「〃」, CID+15981「〆」を搭載している。
+  これらには組方向に最適化したグリフは存在しない。}
 
 \footnotetext{本資料は\XeLaTeX 組版で日本語処理機能を有効にしていないため、
 日本語組版としてはおかしなところがある。}
