--- a/tex/test-kana-pwid.xelatex.tex
+++ b/tex/test-kana-pwid.xelatex.tex
@@ -266,6 +266,10 @@
   \test{\XeTeXglyph15722}
   \test{\XeTeXglyph15723}
   \test{\XeTeXglyph15724}
+
+  かな類似CID+15453, CID+15454\par
+  \test{\XeTeXglyph15453}
+  \test{\XeTeXglyph15454}
 }
 
 \begin{document}
@@ -278,7 +282,11 @@
 \abstract{%
   原ノ味フォント20210101版は、
   CID+15723小書き「こ」およびCID+15724小書き「コ」を搭載していない。
-  これは、源ノフォントがこれらのグリフを搭載していないためである。}
+  これは、源ノフォントがこれらのグリフを搭載していないためである。
+
+  原ノ味フォント202202xx版より、かなに類似したグリフとして
+  CID+15453「〃」, CID+15454「〆」を搭載している。
+  これらには組方向に最適化したグリフは存在しない。}
 
 \footnotetext{本資料は\XeLaTeX 組版で日本語処理機能を有効にしていないため、
 日本語組版としてはおかしなところがある。}
