--- a/tex/test-kana-pwid.xelatex.tex
+++ b/tex/test-kana-pwid.xelatex.tex
@@ -284,7 +284,7 @@
   CID+15723小書き「こ」およびCID+15724小書き「コ」を搭載していない。
   これは、源ノフォントがこれらのグリフを搭載していないためである。
 
-  原ノ味フォント202202xx版より、かなに類似したグリフとして
+  原ノ味フォント20220220版より、かなに類似したグリフとして
   CID+15453「〃」, CID+15454「〆」を搭載している。
   これらには組方向に最適化したグリフは存在しない。}
 
