--- a/tex/test-kana-pwidvert.xelatex.tex
+++ b/tex/test-kana-pwidvert.xelatex.tex
@@ -281,7 +281,7 @@
   CID+16191小書き「こ」およびCID+16192小書き「コ」を搭載していない。
   これは、源ノフォントがこれらのグリフを搭載していないためである。
 
-  原ノ味フォント202202xx版より、かなに類似したグリフとして
+  原ノ味フォント20220220版より、かなに類似したグリフとして
   CID+15980「〃」, CID+15981「〆」を搭載している。
   これらには組方向に最適化したグリフは存在しない。}
 
