--- a/tex/test-rotate-copy.platex-nomap.tex
+++ b/tex/test-rotate-copy.platex-nomap.tex
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント 202202xx 回転・コピーグリフ一覧
+% 原ノ味フォント 20220220 回転・コピーグリフ一覧
 % CTAN haranoaji パッケージ収録分
 
 \documentclass[dvipdfmx]{jsarticle}
@@ -22,7 +22,7 @@
 
 \usepackage{test-rotate-copy}
 
-\title{原ノ味フォント202202xx回転・コピーグリフ一覧 \\
+\title{原ノ味フォント20220220回転・コピーグリフ一覧 \\
 --- CTAN haranoaji パッケージ収録分 ---}
 \author{細田 真道}
 
