--- a/tex/test-rotate-copy.platex-otf.tex
+++ b/tex/test-rotate-copy.platex-otf.tex
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント 202202xx 回転・コピーグリフ一覧
+% 原ノ味フォント 20220220 回転・コピーグリフ一覧
 % グリフ比較用
 
 \documentclass[dvipdfmx]{jsarticle}
@@ -10,7 +10,7 @@
 
 \usepackage{test-rotate-copy}
 
-\title{原ノ味フォント202202xx回転・コピーグリフ一覧 \\
+\title{原ノ味フォント20220220回転・コピーグリフ一覧 \\
 --- グリフ比較用 ---}
 \author{細田 真道}
 
@@ -31,7 +31,7 @@
   デザインの差を除いて同じような表示になれば、
   原ノ味フォントのグリフが正しいと考えることができる。
 
-  原ノ味フォント202202xxから追加したCID+12169は
+  原ノ味フォント20220220から追加したCID+12169は
   小塚とは微妙に角度が違ってしまっている。
   しかし、組み合わせて使うCID+12170は以前から変換グリフとして存在しており、
   こちらも同様に小塚とは微妙に角度が違っていた。
