--- a/tex/test-rotate-copy.sty
+++ b/tex/test-rotate-copy.sty
@@ -1,6 +1,6 @@
 % -*- coding: utf-8 mode:latex -*-
 
-% 原ノ味フォント 202202xx 回転・コピーグリフ
+% 原ノ味フォント 20220220 回転・コピーグリフ
 % テスト用マクロ
 
 \definecolor{gray1}{rgb}{.9,.9,.9}
