Divide tex/kana-fwid*.tex to H/V

--- a/tex/test-kana-fwid-extra.platex-nomap.tex
+++ b/tex/test-kana-fwid-extra.platex-nomap.tex
@@ -43,48 +43,97 @@
 \mcfamily\ltseries
 {\huge 原ノ味明朝\textmd{ExtraLight}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \mcfamily\mdseries
 {\huge 原ノ味明朝\textmd{Medium}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \mgfamily % 丸ゴシックの代替を明朝SemiBoldにしたのでそれを利用
 {\huge 原ノ味明朝\textmd{SemiBold}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \mcfamily\bfseries
 {\huge 原ノ味明朝\textmd{Heavy}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \gtfamily\mdseries
 {\huge 原ノ味角ゴシック\textmd{ExtraLight}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \gtfamily\bfseries
 {\huge 原ノ味角ゴシック\textmd{Light}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \gtfamily\ebseries
 {\huge 原ノ味角ゴシック\textmd{Normal}}
 
-\testAll
+\testAllH
+
+\clearpage
+
+\mcfamily\ltseries
+{\huge 原ノ味明朝\textmd{ExtraLight}}
+
+\testAllV
+
+\clearpage
+
+\mcfamily\mdseries
+{\huge 原ノ味明朝\textmd{Medium}}
+
+\testAllV
+
+\clearpage
+
+\mgfamily % 丸ゴシックの代替を明朝SemiBoldにしたのでそれを利用
+{\huge 原ノ味明朝\textmd{SemiBold}}
+
+\testAllV
+
+\clearpage
+
+\mcfamily\bfseries
+{\huge 原ノ味明朝\textmd{Heavy}}
+
+\testAllV
+
+\clearpage
+
+\gtfamily\mdseries
+{\huge 原ノ味角ゴシック\textmd{ExtraLight}}
+
+\testAllV
+
+\clearpage
+
+\gtfamily\bfseries
+{\huge 原ノ味角ゴシック\textmd{Light}}
+
+\testAllV
+
+\clearpage
+
+\gtfamily\ebseries
+{\huge 原ノ味角ゴシック\textmd{Normal}}
+
+\testAllV
 
 \end{document}
