--- a/tex/test-kana-fwid.platex-nomap.tex
+++ b/tex/test-kana-fwid.platex-nomap.tex
@@ -45,48 +45,97 @@
 \mcfamily\ltseries
 {\huge 原ノ味明朝\textmd{Light}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \mcfamily\mdseries
 {\huge 原ノ味明朝\textmd{Regular}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \mcfamily\bfseries
 {\huge 原ノ味明朝\textmd{Bold}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \gtfamily\mdseries
 {\huge 原ノ味角ゴシック\textmd{Regular}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \mgfamily % 丸ゴシックの代替が角ゴシックMediumなのでそれを利用
 {\huge 原ノ味角ゴシック\textmd{Medium}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \gtfamily\bfseries
 {\huge 原ノ味角ゴシック\textmd{Bold}}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \gtfamily\ebseries
 {\huge 原ノ味角ゴシック\textmd{Heavy}}
 
-\testAll
+\testAllH
+
+\clearpage
+
+\mcfamily\ltseries
+{\huge 原ノ味明朝\textmd{Light}}
+
+\testAllV
+
+\clearpage
+
+\mcfamily\mdseries
+{\huge 原ノ味明朝\textmd{Regular}}
+
+\testAllV
+
+\clearpage
+
+\mcfamily\bfseries
+{\huge 原ノ味明朝\textmd{Bold}}
+
+\testAllV
+
+\clearpage
+
+\gtfamily\mdseries
+{\huge 原ノ味角ゴシック\textmd{Regular}}
+
+\testAllV
+
+\clearpage
+
+\mgfamily % 丸ゴシックの代替が角ゴシックMediumなのでそれを利用
+{\huge 原ノ味角ゴシック\textmd{Medium}}
+
+\testAllV
+
+\clearpage
+
+\gtfamily\bfseries
+{\huge 原ノ味角ゴシック\textmd{Bold}}
+
+\testAllV
+
+\clearpage
+
+\gtfamily\ebseries
+{\huge 原ノ味角ゴシック\textmd{Heavy}}
+
+\testAllV
 
 \end{document}
