--- a/tex/test-kana-fwid.sty
+++ b/tex/test-kana-fwid.sty
@@ -6,7 +6,7 @@
 \definecolor{gray1}{rgb}{.9,.9,.9}
 \newcommand{\test}[1]{\colorbox{gray1}{#1}\textmd{~}}
 
-\newcommand{\testAll}{
+\newcommand{\testAllH}{
   \large
   横組み用
 
@@ -537,8 +537,10 @@
   \test{\CID{633}}%
   \test{\CID{633}}%
   \test{\CID{633}}%
+}
 
-  \clearpage
+\newcommand{\testAllV}{
+  \large
   縦組み用
 
   CID+7891
