--- a/tex/test-kana-fwid.platex-otf.tex
+++ b/tex/test-kana-fwid.platex-otf.tex
@@ -45,13 +45,27 @@
 \mcfamily
 {\huge 明朝}
 
-\testAll
+\testAllH
 
 \clearpage
 
 \gtfamily
 {\huge ゴシック}
 
-\testAll
+\testAllH
+
+\clearpage
+
+\mcfamily
+{\huge 明朝}
+
+\testAllV
+
+\clearpage
+
+\gtfamily
+{\huge ゴシック}
+
+\testAllV
 
 \end{document}
