Add description of HaranoAjiFonts 20250811 to test-cid13463*.tex

--- a/tex/test-cid13463.platex-nomap.tex
+++ b/tex/test-cid13463.platex-nomap.tex
@@ -51,7 +51,13 @@
   前者のグリフをCID+13463に、後者のグリフをCID+2510にマッピングしていた。
   しかし、源ノ角ゴシック2.003版では前者のグリフが無くなってしまったので、
   原ノ味角ゴシック20210410版では
-  後者のグリフをCID+13463にコピーすることにする。
+  後者のグリフをCID+13463にコピーすることにした。
+
+  ところが源ノ角ゴシック2.005版（2025年6月18日リリース）では、
+  グリフ名のリストがおかしい問題が修正され、
+  それに伴いuni4E08uE0101-JPが復活した。
+  そこで源ノ角ゴシック2.005版をベースとした原ノ味角ゴシック20250811版では
+  グリフのコピーをやめた。
 
   本ファイルはCID+13463とCID+2510のグリフを比較するためのものである。
 }
