Add description of HaranoAjiFonts 20250811 to test-missing-kanji-cids*.tex

--- a/tex/test-missing-kanji-cids.platex-otf.tex
+++ b/tex/test-missing-kanji-cids.platex-otf.tex
@@ -38,6 +38,9 @@
   このファイルはその修正が正しいか確認するためのものである。
   なお、原ノ味フォント20220130で食い違いが修正された
   源ノ明朝2.001ベースとなったため独自の修正は不要となった。
+
+  源ノ角ゴシック2.005でようやく最後まで残った食い違いが修正され、
+  これをベースとした原ノ味フォント20250811ではこの問題はすべて解消された。
 }
 
 \clearpage
